# polling-site-backend

./: .env  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/controllers/: mod.rs
src/controllers/authHandlers/: get_passkey_auth_state.rs
src/controllers/websockets/: lobby.rs  messages.rs  mod.rs  start_connection.rs  ws.rs
src/routes/auth/: finish_verification.rs  register.rs  start_verification.rs
src/routes/polling/: check_attempted.rs  close_poll.rs  create_poll.rs  get_polls.rs  get_quiz.rs  mod.rs  question_scores.rs  reset_poll.rs  vote_handler.rs
